@@ -1,3 +1,7 @@
+2003-11-22  Werner Koch  <wk@gnupg.org>
+
+	* addrutil.c (FinishRecord): For mode 0, escape quote colons.
+
 2003-11-18  Werner Koch  <wk@gnupg.org>
 
 	* manifest-tool: New.
